Add nested caching across list playrecords
